--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ cuda_add_executable(ktruss   test/KTrussTest.cu)
 cuda_add_executable(triangle test/TriangleTest.cu)
 cuda_add_executable(adjinter test/ForAllAdjIntersectionsTest.cu)
 cuda_add_executable(triangle2 test/TriangleTest2.cu)
-cuda_add_executable(kcore    test/KCoreTest.cu)
+cuda_add_executable(pcpm     test/PCPM_PR.cu)
 
 target_link_libraries(bfs      hornetAlg hornet)
 target_link_libraries(bfs2     hornetAlg hornet)
@@ -45,4 +45,4 @@ target_link_libraries(ktruss   hornetAlg hornet)
 target_link_libraries(triangle hornetAlg hornet)
 target_link_libraries(adjinter hornetAlg hornet)
 target_link_libraries(triangle2 hornetAlg hornet)
-target_link_libraries(kcore    hornetAlg hornet)
+target_link_libraries(pcpm    hornetAlg hornet)
